src/objects/OM_Questions__c.object
<CustomObject>
    <fields>
        <fullName>OM_SubOfferings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OM_SubOfferings</label>
        <referenceTo>OM_SubOfferings__c</referenceTo>
        <relationshipLabel>questions</relationshipLabel>
        <relationshipName>questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RadiButton</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <externalId>true</externalId>
        <label>test</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>OM_Questions</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OM_Questions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>